# hydra

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUMMARY.md  pyproject.toml
.claude/: .audit-progress.md  .docker-fix-progress.md  ralph-loop.local.md
.claude/agents/: crypto-specialist.md  forensics-specialist.md  misc-specialist.md  pwn-specialist.md  rev-specialist.md  verifier-specialist.md  web-specialist.md
.claude/skills/crypto/: aes-modes.md  ecc-attacks.md  hnp-attacks.md  padding-oracle.md  rsa-attacks.md
.claude/skills/forensics/: pcap-deep.md  stego-checklist.md  volatility-deep.md
.claude/skills/hw/: uart-sigrok.md
.claude/skills/meta/: exploit-debug.md  guardrails.md  handoff-protocol.md  iat-pattern.md  no-prior-knowledge.md  output-summarize.md  subtask-decomposition.md
.claude/skills/misc/: cipher-id.md  osint-playbook.md
.claude/skills/pwn/: format-string.md  heap-exploitation.md  ret2dlresolve.md  rop-chains.md  tmux-session.md
.claude/skills/rev/: anti-debug.md  rev-methodology.md
.claude/skills/web/: deserialization.md  jwt-attacks.md  lfi-rce.md  prototype-pollution.md  sqli-cheatsheet.md  ssrf.md  ssti-bypass.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  playbook_fork.md
.github/workflows/: ci.yml
docker/: apt-packages.txt  ghidra-wrapper.sh  requirements-ctf.txt
docs/: audit-2026-04-14.md
docs/superpowers/plans/: 2026-04-14-hydra-p1-implementation.md  2026-04-16-phase3-postmortem-fixes.md  2026-04-16-phase4-hard-guards-and-tools.md  2026-04-17-session-limit-guard.md  2026-04-18-watchdog-and-flag-gate.md  2026-04-19-watchdog-review-fixes.md
docs/superpowers/specs/: 2026-04-14-hydra-ctf-agent-design.md
examples/: README.md  challenges-bug-bounty-template.json  challenges-toy.json  quickstart.md
exploits/crypto/: ecc_hnp_search.c  lcg_predict.py  rsa_common_modulus.py  rsa_fermat.py  rsa_hastad_small_e.py  rsa_wiener.py  xor_known_plaintext.py
exploits/forensics/: lsb_extract.py  pcap_extract_creds.py  volatility_profile.py
exploits/pwn/: angr_find_input.py  fmtstr_leak.py  ret2libc.py
exploits/web/: jwt_none_alg.py  sqli_blind_time.py  ssti_jinja2.py
hydra/: cli.py  docker_worker.py  failures.py  flag_extractor.py  flag_gate.py  flag_validator.py  heartbeat.py  models.py  normalize.py  orchestrator.py  remote_contact.py  results.py  usage.py  watchdog.py  workdir.py
notes/: lessons-learned.md
notes/writeups/: anthropic-discord-intro.md  article-2-prompt-supervisor.md  article-3-cache-cadence.md  dev-to-and-linkedin.md  flagship-supervision.md  launch-runbook.md  newsletter-outreach.md  reddit-posts.md  show-hn.md  tweet-snippets.md  x-thread.md
prompts/: README.md  bb-babysit.md  ctf-ingest.md  hydra-babysit.md
tests/integration/: conftest.py  fake_docker.py  test_pipeline.py
tests/unit/: test_cli.py  test_docker_worker.py  test_failures.py  test_flag_extractor.py  test_flag_gate.py  test_flag_validator.py  test_heartbeat.py  test_models.py  test_normalize.py  test_orchestrator.py  test_remote_contact.py  test_results.py  test_usage.py  test_watchdog.py  test_workdir.py
(+4 files in other folders)
