[project]
name = "hydra-ctf"
version = "0.1.0"
description = "Autonomous CTF solver — JSON in, flags out"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[project.scripts]
hydra = "hydra.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hydra*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Default rules (E, F). Exploit templates use `from pwn import *` which is
# the pwntools convention — don't flag it there.
extend-ignore = []

[tool.ruff.lint.per-file-ignores]
"exploits/**/*.py" = ["F401", "F403", "F405", "E402", "E702"]
# Skill files and inline-runnable exploit templates intentionally leave
# `# TODO` placeholders that the solver fills in at run-time.
