[project]
name = "hydra-ctf"
version = "0.1.0"
description = "Autonomous CTF solver — JSON in, flags out"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[project.scripts]
hydra = "hydra.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hydra*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration"]

[tool.ruff]
line-length = 100
# `.claude/worktrees/` holds locked temporary worktrees created by the
# Claude Code agent harness. Walking them doubles-up ruff findings on
# stale copies of our own code; exclude.
extend-exclude = [".claude/worktrees"]

[tool.ruff.lint]
# Default rules (E, F) plus B (bugbear: catches common real bugs) and
# UP (pyupgrade: keep code on modern 3.12+ idioms). Exploit templates
# use `from pwn import *` which is the pwntools convention — don't flag
# it there.
extend-select = ["B", "UP"]
extend-ignore = []

[tool.ruff.lint.per-file-ignores]
# Exploit templates: pwntools idioms (F401/F403/F405/E402/E702),
# zip() without strict= (B905 — crypto code often pairs equal-length
# sequences by construction), and %-format strings (UP031 — preserves
# payload formatting as authored in the original writeup).
"exploits/**/*.py" = ["F401", "F403", "F405", "E402", "E702", "B905", "UP031"]
# Skill files and inline-runnable exploit templates intentionally leave
# `# TODO` placeholders that the solver fills in at run-time.
